projects/compiler/test/parser/enumdecl_error_bad_trait.3.out
Error at %FILE_NAME%:1:18
Unexpected token '(', expected 'identifier':
  |  enum FooBar123 : (Foo) => Bar {
                      ^