projects/compiler/test/parser/enumdecl_error_bad_trait.3.abra
enum FooBar123 : (Foo) => Bar {

}
